<resources>
    <string name="movie">Movie</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>

    <string name="judul">Title</string>
    <string name="deskripsi">Description</string>
    <string name="popularity">Popularity</string>
    <string name="genre">Genre</string>

    <string name="user_score">User Score</string>
    <string name="tv_show">TV Show</string>
    <string name="setting">Setting</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="retry">Retry</string>
    <string name="movie_empty">Movie Empty</string>
    <string name="tv_show_empty">TV Show Empty</string>
    <string name="favorite">Favorite</string>
    <string name="empty_favorite">Empty Favorite</string>
    <string name="berhasil_ditambahkan_favorite">Added Favorite Success</string>
    <string name="berhasil_dihapus_favorite">Remove from favorite Success</string>
    <string name="judul_name">%1$s (%2$s)</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="other">Other</string>
    <string name="daily_notif_active">Daily notification active</string>
    <string name="daily_notif_disable">Daily notification disable</string>
    <string name="release_notif_active">Release notification active</string>
    <string name="release_notif_disable">Release notification disable</string>
    <string name="daily_notif">Daily Notification</string>
    <string name="release_notif">Release Notification</string>
    <string name="bahasa">Language</string>
    <string name="notifikasi">Notification</string>
    <string name="now_release">Now Release !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
