<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context="com.bezzo.moviecatalogue.features.setting.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:minHeight="?android:attr/actionBarSize"
        android:maxHeight="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bahasa"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/rb_indonesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indonesia" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_effective"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifikasi"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sc_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_notif"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:switchPadding="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sc_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_notif"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:switchPadding="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_effective"/>
</LinearLayout>
